[package]
name = "webhook-receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "json"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
